# Segmentation3d

./: .gitignore  CMakeLists.txt  main.cpp
Class/: Patch.cpp  Patch.h
files/: Computation.cpp  Computation.h
